cmake_minimum_required(VERSION 3.24)
project(task_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(task_1_61_32
        task_1_61_32.cpp)

add_executable(lab_2_12.cpp
        lab_2_12.cpp)

add_executable(AbstractFactory.cpp
        AbstractFactory.cpp)

add_executable(lll.cpp
        lll.cpp)

add_executable(task_lection.cpp
        task_lection.cpp)

add_executable(task__1.cpp
        task__1.cpp)

add_executable(lab3_12.cpp
        lab3_12.cpp)

add_executable(lab3_33.cpp
        lab_3_33.cpp)

add_executable(lab4_12.cpp
        lab_4_12.cpp)

add_executable(5_12.cpp
        5_12.cpp)

add_executable(lab_3_52.cpp
        lab_3_52.cpp)

add_executable(4_12.cpp
        4_12.cpp)

add_executable(6_12.cpp
        6_12.cpp)